--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,4 @@
-dbpwd=system
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=system
+spring.datasource.password=system
